# xhshow-1

./: .env  .gitignore  README.md  README_INTEGRATION.md  keywords.xlsx  pyproject.toml  requirements.txt  search_results_20250324_162536.xlsx  setup.py
.github/: 1.json
learn/: __init__.py  analyze_attraction_cmd.py  attraction_analyzer.py  batch_analyze_attractions.py  get_note_detail_runner.py  readme.md  search_id.py  search_notes_runner.py  xs_runner.py
processor/analyzers/: ark_analyzer.py  base_analyzer.py  prompt_templates.py
processor/relevance_analyzer/: __init__.py  analyze_attractions.py  analyzer.py  cli.py
xhs/: __init__.py
xhs/config/: __init__.py
xhs/encrypt/: misc_encrypt.py  xs_encrypt.py  xsc_encrypt.py
xhs/extractor/: extract_initial_state.py
xhs/request/: AsyncRequestFramework.py  __init__.py  file.py  note.py
xhshow_1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
