[project]
name = "xhshow-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles~=24.1.0",
    "beautifulsoup4~=4.12.3",
    "loguru~=0.7.2",
    "lxml~=5.3.0",
    "openpyxl~=3.1.5",
    "pandas~=2.2.3",
    "pillow~=11.0.0",
    "pycryptodome~=3.21.0",
    "requests~=2.32.3",
    "typeguard~=4.4.1",
]
