[project]
name = "xhshow-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles~=24.1.0",
    "beautifulsoup4~=4.13.3",
    "demjson3>=3.0.6",
    "dotenv>=0.9.9",
    "loguru~=0.7.2",
    "lxml~=5.3.0",
    "openai>=1.68.2",
    "openpyxl~=3.1.5",
    "pandas~=2.2.3",
    "pillow~=11.2.1",
    "pycryptodome~=3.23.0",
    "requests~=2.32.3",
    "typeguard~=4.4.1",
]
